feat: integrate student attendance per bab with automatic baknusdrive sync and enhanced teacher view